--- a/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/css/ks.css
+++ b/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/css/ks.css
@@ -80,15 +80,12 @@ p {
 	margin-bottom: 5px;
 }
 
-#request {
-	padding-top: 8px;
-	padding-bottom: 8px;
-}
-
 .subbar {
 	background-color: #ddd;
 	border-bottom: 1px solid #bbb;
 	margin-bottom: 15px;
+	padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .error {
@@ -137,6 +134,16 @@ p {
 .selected {
 	border-bottom: 3px solid black;
 }
+
+.datatable th        { padding-left: 10px!important; padding-right: 10px!important }
+.datatable ol        { margin-left: 0px; margin-bottom: 0px }
+.datatable-head th   { border: none!important; padding-bottom: 0px!important }
+.datatable-filter th { border-top: none!important; border-bottom: 1px solid #dddddd!important; padding-top: 0px!important }
+.datatable td        { padding-top: 2px!important; padding-bottom: 2px!important; background-color: white!important }
+.datatable tr:hover td  { background-color: #eaeaea!important }
+table.datatable      { border-bottom: none!important; width: auto!important; min-width: 100%}
+.dataTables_scrollBody { border: none!important }
+.dataTables_scroll   { border: 1px solid #dddddd!important; background-color: white; border-radius: 4px; box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);}
 
 /* Pretty printing styles. Used with prettify.js. */
 .pln {
