--- a/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/lookup.mustache
+++ b/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/lookup.mustache
@@ -7,7 +7,7 @@
   <input type="hidden" name="action" value="lookup"/>
   <div class="form-group">
     <div class="input-group" style="max-width: 700px">
-      <span class="input-group-addon">ID</span>
+      <span class="input-group-addon input-sm">ID</span>
       <input id="id" class="form-control input-sm" name="id" type="text" size="128" placeholder="Enter URI" {{#id}}value="{{id}}"{{/id}}>
     </div>
   </div>
