--- a/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/sparql.mustache
+++ b/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/sparql.mustache
@@ -13,9 +13,9 @@
   <div class="row">
     <div class="form-group col-sm-2">
       <div class="input-group">
-        <span class="input-group-addon">Timeout</span>
+        <span class="input-group-addon input-sm">Timeout</span>
         <input id="timeout" class="form-control input-sm" name="timeout" type="text" size="9" placeholder="600" {{#timeout}}value="{{timeout}}"{{/timeout}}/>
-        <span class="input-group-addon">s</span>
+        <span class="input-group-addon input-sm">s</span>
       </div>
     </div>
     <div class="form-group col-sm-2">
@@ -59,7 +59,6 @@
       {{/examplesScript}}
     </div>    
   </div>
-</fieldset>
 </form>
 </div>
 </div>
