--- a/src/site/markdown/publications.md.vm
+++ b/src/site/markdown/publications.md.vm
@@ -4,14 +4,19 @@
 
 Please cite the following paper, if you use the KnowledgeStore:
 
-  * [Interlinking Unstructured and Structured Knowledge in an Integrated Framework](http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=06693492)
+  * [The KnowledgeStore: a Storage Framework for Interlinking Unstructured and Structured Knowledge](http://www.igi-global.com/article/the-knowledgestore/136832)
+    (Francesco Corcoglioniti, Marco Rospocher, Roldano Cattoni, Bernardo Magnini, Luciano Serafini),
+    in International Journal on Semantic Web and Information Systems, volume 11, 2015
+    \[[pdf](https://dkm-static.fbk.eu/people/rospocher/files/pubs/2015ijswis.pdf)\]
+    \[[bib](https://dkm-static.fbk.eu/people/rospocher/bibtexbrowser.php?key=2015ijswis&amp;bib=my_pub.bib)\]
+     
+Other papers:
+
+  * Interlinking Unstructured and Structured Knowledge in an Integrated Framework
     (Francesco Corcoglioniti, Marco Rospocher, Roldano Cattoni, Bernardo Magnini, Luciano Serafini),
     in The 7th IEEE International Conference on Semantic Computing (ICSC), Irvine, CA, USA, 2013
     \[[pdf](https://dkm-static.fbk.eu/people/rospocher/files/pubs/2013icsc.pdf)\]
     \[[bib](https://dkm-static.fbk.eu/people/rospocher/bibtexbrowser.php?key=2013icsc&amp;bib=my_pub.bib)\]
-
-Other papers:
-
   * Integrating NLP and SW with the KnowledgeStore
     (Marco Rospocher, Francesco Corcoglioniti, Roldano Cattoni, Bernardo Magnini, Luciano Serafini)
     in ISWC 2014 Posters & Demonstrations Track, within the 13th International Semantic Web Conference (ISWC 2014),
@@ -37,3 +42,4 @@ Other papers:
     * [D6.1: KnowledgeStore Design](http://www.newsreader-project.eu/files/2012/12/NewsReader-316404-D6.1_v1.6.pdf) (June 2013)
     * [D6.2.1: KnowledgeStore version 1](http://www.newsreader-project.eu/files/2012/12/NewsReader-316404-D6.2.1.pdf) (December 2013)
     * [D6.2.2: KnowledgeStore version 2](${site-root}files/NWR-D6-2-2.pdf) (February 2015)
+    * [D6.2.3: KnowledgeStore version 2](${site-root}files/NWR-D6-2-3.pdf) (October 2015)
